@@ -1,5 +1,10 @@
 *** WooCommerce Dintero Plugin Changelog ***
 
+2020-04-04
+
+ * updated order shipping address to display information for business customer
+ * updated the order payment method, show actual payment method (via Dintero)
+
 
 2020-04-02
 
